--- a/index.css
+++ b/index.css
@@ -31,3 +31,23 @@ main {
     font-size: 14px;
     color: #dcdcdc;
 }
+
+.form input:focus {
+    outline: solid 1px #a3c4bc;
+}
+
+.form :nth-last-child(1) {
+    border: none;
+    border-radius: 8px;
+    margin: 12px 0;
+    padding: 13px;
+    background-color: #a3c4bc;
+    color: #2c2c3a;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.form :nth-last-child(1):hover {
+    background-color: #8caea6;
+}
